# ifmo_llp_labs

./: CMakeLists.txt  CTestCustom.cmake.in  README.md  build-and-test.bat  build-and-test.sh  runtest.cmake
client/: CMakeLists.txt
client/src/: main.c
common/: CMakeLists.txt
common/include/common/private/error/: error.h
common/include/common/private/util/: queue.h  string.h
common/include/common/public/domain/: column_types.h  expression_operator_types.h
common/include/common/public/error/: error.h  error_handler.h  errors_common.h
common/include/common/public/util/: queue.h  result.h  string.h
common/src/error/: error.c  error_handler.c  errors_common.c
common/src/util/: queue.c  string.c
database/: CMakeLists.txt
database/benchmark/: benchmark.py
database/include/database/: prelude.h
database/include/database/private/database/: database_manager.h  table_manager.h
database/include/database/private/database/domain/: join.h  predicate.h  schema.h  table.h
database/include/database/private/database/domain/expression/: expression_interface.h  expression_operator_interface.h  expression_operators.h  expressions.h
database/include/database/private/database/domain/record/: record.h  record_group.h  record_update.h  record_view.h  single_record_holder.h
database/include/database/private/database/domain/statement/: statement_interface.h  statements.h
database/include/database/private/file/: file_manager.h  page_manager.h  page_resolver.h
database/include/database/private/storage/: page_data_manager.h  page_group_manager.h
database/include/database/public/database/: database_manager.h  record_serialization.h  table_manager.h
database/include/database/public/database/domain/: join.h  predicate.h  schema.h  table.h  types.h
database/include/database/public/database/domain/expression/: expression_interface.h  expression_operator_interface.h  expression_operators.h  expressions.h
database/include/database/public/database/domain/record/: record.h  record_group.h  record_update.h  record_view.h  single_record_holder.h
database/include/database/public/database/domain/statement/: statement_interface.h  statements.h
database/include/database/public/file/: file_manager.h  page_manager.h  page_resolver.h
database/include/database/public/storage/: page_data_manager.h  page_group_manager.h
database/include/database/public/storage/domain/: item.h
database/include/private/database/: database_manager.h
database/include/private/database/domain/: predicate.h
database/include/private/database/domain/expression/: expression_interface.h  expression_operator_interface.h  expression_operators.h  expressions.h
database/include/private/database/domain/record/: record_group.h  record_update.h  single_record_holder.h
database/include/private/database/domain/statement/: statements.h
database/include/private/error/: error.h
database/include/private/file/: file_manager.h  page_manager.h
database/include/private/util/: queue.h
database/include/public/: prelude.h
database/include/public/database/: table_manager.h
database/include/public/database/domain/: join.h  types.h
database/include/public/database/domain/expression/: expression_operators.h
database/include/public/database/domain/record/: record.h  record_group.h
database/include/public/database/domain/statement/: statements.h
database/include/public/file/: page_manager.h  page_resolver.h
database/include/public/storage/domain/: item.h  page_group.h  page_item.h
database/src/database/: database_manager.c  record_serialization.c  table_manager.c
database/src/database/domain/: join.c  predicate.c  schema.c  table.c
database/src/database/domain/expression/: expression_interface.c  expression_operator_interface.c  expression_operators.c  expressions.c
database/src/database/domain/record/: record.c  record_group.c  record_printer.c  record_update.c  record_view.c  single_record_holder.c
database/src/database/domain/statement/: statement_interface.c  statements.c
database/src/error/: error_handler.c
database/src/file/: file_manager.c  page_manager.c  page_resolver.c
database/src/storage/: page_data_manager.c  page_group_manager.c
database/src/storage/domain/: item.c
database/src/util/: queue.c  string.c
database/test/: CMakeLists.txt  runtest.cmake
database/test/test_src/: create_table.c  delete_records.c  drop_table.c  joins.c  populate_table.c  stress_delete.c  stress_insert.c  stress_insert_delete.c  stress_query.c  stress_update.c  update_records.c
database/test/util_include/: common_table_operations.h  common_test_utils.h
database/test/util_src/: common_table_operations.c
parser/: CMakeLists.txt
parser/include/parser/: prelude.h
parser/include/parser/private/: ast_node_interface.h  ast_nodes.h  lexer_utils.h  parser.h
parser/include/parser/public/: ast_node_interface.h  ast_nodes.h  parser.h
parser/src/: ast_node_interface.c  ast_nodes.c  lexer.l  lexer_utils.c  parser.c  parser.y
parser/test/: CMakeLists.txt  runtest.cmake
parser/test/test_src/: delete_where.c  drop_table.c  error_no_semicolon.c  insert.c  main.c  select_from.c  select_join.c  select_where.c  select_where_ands.c  select_where_joins.c  update_where.c
parser/test/util_include/: test_statement.h
parser/test/util_src/: main.c  test_statement.c
parser_client/: CMakeLists.txt
parser_client/src/: main.c
test/: CMakeLists.txt  main.c  runtest.cmake
test/test_src/: create_table.c  delete_records.c  drop_table.c  joins.c  populate_table.c  stress_insert.c  stress_insert_delete.c  stress_query.c  stress_update.c  update_records.c
test/util_include/: create_common_table.h  database_manager_wrapper.h
test/util_src/: common_table_operations.c  create_common_table.c
transfer/: CMakeLists.txt
transfer/include/transfer/public/: database_service.h  service_types.h
transfer/src/: service.thrift
transfer_server/: CMakeLists.txt
transfer_server/include/transfer_server/private/: handler.h  mapper.h
transfer_server/src/: handler.c  main.c  map_result.c  map_stmt.c
(+135 files in other folders)
